@@ -20,5 +20,6 @@
 void init(napi_env env, napi_callback_info info);
 napi_value binding_set_bounds(napi_env env, napi_callback_info info);
 napi_value measure(napi_env env, napi_callback_info info);
+napi_value destroy(napi_env env, napi_callback_info info);
 
 #endif /* OTHER_FUNCTIONS_H */
